<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_action_home"/>
    <item
        android:id="@+id/myprofile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_action_profile"/>
    <item
        android:id="@+id/favrestaurants"
        android:title="@string/favourite_restaurant"
        android:icon="@drawable/ic_action_favourite"/>
    <item
        android:id="@+id/faq"
        android:title="@string/faqs"/>
    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_action_logout"/>
    </group>
</menu>